--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,3 +4,34 @@
 * {
   font-family: "Outfit", sans-serif;
 }
+/* Home Headings */
+.home-heading-small {
+  font-size: 28px;
+  line-height: 34px;
+  font-weight: 700;
+}
+
+.home-heading-large {
+  font-size: 48px;
+  line-height: 56px;
+  font-weight: 800;
+}
+
+/* Course Detail Headings */
+.course-details-heading-small {
+  font-size: 26px;
+  line-height: 36px;
+  font-weight: 600;
+}
+
+.course-details-heading-large {
+  font-size: 36px;
+  line-height: 44px;
+  font-weight: 700;
+}
+
+/* Default Text */
+.text-default {
+  font-size: 15px;
+  line-height: 21px;
+}
