--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,34 +4,89 @@
 * {
   font-family: "Outfit", sans-serif;
 }
-/* Home Headings */
-.home-heading-small {
-  font-size: 28px;
-  line-height: 34px;
-  font-weight: 700;
-}
-
-.home-heading-large {
-  font-size: 48px;
-  line-height: 56px;
-  font-weight: 800;
-}
-
-/* Course Detail Headings */
-.course-details-heading-small {
-  font-size: 26px;
-  line-height: 36px;
-  font-weight: 600;
-}
-
-.course-details-heading-large {
-  font-size: 36px;
-  line-height: 44px;
-  font-weight: 700;
-}
-
-/* Default Text */
-.text-default {
+.rich-text {
   font-size: 15px;
-  line-height: 21px;
+  color: #7a7b7d;
+}
+
+.rich-text p {
+  margin-bottom: 16px;
+}
+
+.rich-text h1 {
+  font-size: 36px;
+  font-weight: 800;
+  color: #252525;
+  margin: 32px 0;
+}
+
+.rich-text h2 {
+  font-size: 22px;
+  font-weight: 700;
+  color: #252525;
+  margin: 24px 0;
+}
+
+.rich-text h3 {
+  font-size: 18px;
+  font-weight: 600;
+  color: #333333;
+  margin: 20px 0;
+}
+
+.rich-text h4 {
+  font-size: 16px;
+  font-weight: 500;
+  color: #444444;
+  margin: 16px 0;
+}
+
+.rich-text h5 {
+  font-size: 14px;
+  font-weight: 400;
+  color: #555555;
+  margin: 12px 0;
+}
+
+.rich-text h6 {
+  font-size: 12px;
+  font-weight: 400;
+  color: #666666;
+  margin: 8px 0;
+}
+
+.rich-text strong {
+  font-weight: 700;
+}
+
+.rich-text ol {
+  margin-left: 30px;
+  list-style-type: decimal;
+}
+
+.rich-text ul {
+  margin-left: 30px;
+  list-style-type: disc;
+}
+
+.rich-text li {
+  margin-bottom: 8px;
+}
+.prose-style h2 {
+  @apply mt-4 mb-2 text-gray-800 text-2xl font-semibold;
+}
+.prose-style p {
+  @apply text-base text-gray-600 leading-relaxed mb-3;
+}
+
+.prose-style ul {
+  @apply list-disc pl-6 text-gray-600 mb-4;
+}
+
+.prose-style li {
+  @apply mb-1;
+}
+
+.prose-style a {
+  @apply text-blue-600 underline;
 }
